--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "next": "^16.0.7",
     "react": "^19.2.1",
+    "react-canvas-confetti": "^2.0.7",
     "react-dom": "^19.2.1"
   },
   "devDependencies": {
