--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.20.0",
   "dependencies": {
+    "@yudiel/react-qr-scanner": "^2.4.1",
     "next": "^16.0.7",
     "react": "^19.2.1",
     "react-canvas-confetti": "^2.0.7",
