--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@yudiel/react-qr-scanner": "^2.4.1",
     "next": "^16.0.7",
     "react": "^19.2.1",
-    "react-canvas-confetti": "^2.0.7",
+    "react-confetti-boom": "^2.0.1",
     "react-dom": "^19.2.1"
   },
   "devDependencies": {
