--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "^16.0.7",
     "react": "^19.2.1",
     "react-confetti-boom": "^2.0.1",
-    "react-dom": "^19.2.1"
+    "react-dom": "^19.2.1",
+    "react-qr-code": "^2.0.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
